--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PhotoTaker</string>
+    <string name="app_name">PhotoNotes</string>
     <string name="photo_view_description">Photo</string>
     <string name="photo_button_label">Photo</string>
     <string name="zoomable_button_label">Zoomable</string>
